# fsm-package

./: .cred  .gitignore  CONTRIBUTING.md  README.md  USAGE.md  db.sqlite3  requirements.txt  setup.py (for humans)  usage.py
CORE_BACKUP/finflo/: api.py  exception.py  models.py  serializer.py  signals.py  transition.py  urls.py
base_pack/: DOCS.md  README.rst  db.sqlite3  setup.cfg  setup.py
base_pack/django_venzo_scf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
base_pack/finflo/: api.py  base_enum.py  serializer.py  signals.py  transition.py
base_pack/finflo-1.10.56/: setup.cfg  setup.py
base_pack/finflo-1.10.56/finflo/: api.py  middleware.py
base_pack/finflo/migrations/: 0001_initial.py  0002_remigrate.py
base_pack/venzoscf/: admin.py  apps.py  cases.py  exception.py  exceptions.py  middleware.py  models.py  signs.py  states.py  tests.py  testscase1.py  urls.py  views.py
base_pack/venzoscf/temp/: index.html
example/app/: models.py  views.py
example/project/: settings.py  urls.py
myapp/: settings.py  urls.py
venzoscf/: admin.py  cases.py  choices.py  middleware.py  models.py  serializer.py  states.py  testscase1.py  views.py
venzoscf/migrations/: 0001_initial.py  0002_auto_20220712_1202.py  0003_transitionmanager_sub_sign.py  0004_alter_transitionmanager_sub_sign.py  0005_alter_transitionmanager_sub_sign.py  0006_alter_workflowitems_type.py  0007_alter_workflowitems_event_user.py  0008_alter_workflowitems_event_user.py  0009_alter_workflowitems_event_user.py  0010_alter_workflowitems_event_user.py  0011_auto_20220713_1147.py  (+1 more)
(+2 files in other folders)
