[metadata]
name = django-venzo-scf
version = 1.0.4
author = anand
license = UNKNOWN
long_description = 'basic fsm for banks',
author_email = anandrajb@venzotechnologies.com
classifiers = 
  Development Status :: 5 - Production/Stable
  Intended Audience :: Education
  Operating System :: Microsoft :: Windows :: Windows 10
  Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
